{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 35,
  "lineage": "a0b628ef-e58e-a4a4-faf1-16d00c73bbb4",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:loadbalancer/app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5",
            "arn_suffix": "app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "url-sh2026050311500755560000000d-633890584.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:loadbalancer/app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "url-sh2026050311500755560000000d",
            "name_prefix": "url-sh",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03fbc2a56a9324255"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c79cb2fe4cde232"
              },
              {
                "subnet_id": "subnet-0879bc93d46374b70"
              }
            ],
            "subnets": [
              "subnet-04c79cb2fe4cde232",
              "subnet-0879bc93d46374b70"
            ],
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-alb",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-alb",
              "Project": "url-shortener"
            },
            "vpc_id": "vpc-006cfd1f175715fe0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_direct",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:listener/app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5/00628de30a91846a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:targetgroup/url-sh20260503114953387100000006/3e40240b0f33ca46",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:listener/app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5/00628de30a91846a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:loadbalancer/app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "url-shortener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_lb.main",
            "module.loadbalancer.aws_lb_target_group.app",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:targetgroup/url-sh20260503114953387100000006/3e40240b0f33ca46",
            "arn_suffix": "targetgroup/url-sh20260503114953387100000006/3e40240b0f33ca46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:028597908062:targetgroup/url-sh20260503114953387100000006/3e40240b0f33ca46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:028597908062:loadbalancer/app/url-sh2026050311500755560000000d/80ae4e5527c4a8f5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "url-sh20260503114953387100000006",
            "name_prefix": "url-sh",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-tg",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-tg",
              "Project": "url-shortener"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:security-group/sg-03fbc2a56a9324255",
            "description": "Allow HTTP/HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fbc2a56a9324255",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "url-shortener-dev-alb-20260503114953387500000007",
            "name_prefix": "url-shortener-dev-alb-",
            "owner_id": "028597908062",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-alb-sg",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-alb-sg",
              "Project": "url-shortener"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:security-group/sg-048238ac741b4e113",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048238ac741b4e113",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App port from ALB only",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03fbc2a56a9324255"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "url-shortener-dev-app-20260503114956065800000009",
            "name_prefix": "url-shortener-dev-app-",
            "owner_id": "028597908062",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-app-sg",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-app-sg",
              "Project": "url-shortener"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:security-group/sg-0520c7162fcbdd83f",
            "description": "Allow Redis from app only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0520c7162fcbdd83f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from app only",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048238ac741b4e113"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "url-shortener-dev-redis-2026050311495828970000000a",
            "name_prefix": "url-shortener-dev-redis-",
            "owner_id": "028597908062",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-redis-sg",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-redis-sg",
              "Project": "url-shortener"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:internet-gateway/igw-02ba7130ea10f3b29",
            "id": "igw-02ba7130ea10f3b29",
            "owner_id": "028597908062",
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-igw",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-igw",
              "Project": "url-shortener"
            },
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:route-table/rtb-0f381b516b9058a3f",
            "id": "rtb-0f381b516b9058a3f",
            "owner_id": "028597908062",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-private-rt",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-private-rt",
              "Project": "url-shortener"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:route-table/rtb-01f5ab57595b806b3",
            "id": "rtb-01f5ab57595b806b3",
            "owner_id": "028597908062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ba7130ea10f3b29",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-public-rt",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-public-rt",
              "Project": "url-shortener"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f6de5c71b963262",
            "route_table_id": "rtb-0f381b516b9058a3f",
            "subnet_id": "subnet-0cdff99c65edd43a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940fbb74dc97888f",
            "route_table_id": "rtb-0f381b516b9058a3f",
            "subnet_id": "subnet-062c197e7102633f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a946a4ab0861f353",
            "route_table_id": "rtb-01f5ab57595b806b3",
            "subnet_id": "subnet-0879bc93d46374b70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08060ad9c5bf158e2",
            "route_table_id": "rtb-01f5ab57595b806b3",
            "subnet_id": "subnet-04c79cb2fe4cde232"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:subnet/subnet-0cdff99c65edd43a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdff99c65edd43a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "028597908062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-private-eu-north-1a",
              "Project": "url-shortener",
              "Tier": "private"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-private-eu-north-1a",
              "Project": "url-shortener",
              "Tier": "private"
            },
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:subnet/subnet-062c197e7102633f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062c197e7102633f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "028597908062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-private-eu-north-1b",
              "Project": "url-shortener",
              "Tier": "private"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-private-eu-north-1b",
              "Project": "url-shortener",
              "Tier": "private"
            },
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:subnet/subnet-0879bc93d46374b70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0879bc93d46374b70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "028597908062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-public-eu-north-1a",
              "Project": "url-shortener",
              "Tier": "public"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-public-eu-north-1a",
              "Project": "url-shortener",
              "Tier": "public"
            },
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:subnet/subnet-04c79cb2fe4cde232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c79cb2fe4cde232",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "028597908062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-public-eu-north-1b",
              "Project": "url-shortener",
              "Tier": "public"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-public-eu-north-1b",
              "Project": "url-shortener",
              "Tier": "public"
            },
            "vpc_id": "vpc-006cfd1f175715fe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:028597908062:vpc/vpc-006cfd1f175715fe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b07c991350228ff5",
            "default_route_table_id": "rtb-0a993fbb47cbfa63f",
            "default_security_group_id": "sg-0e828f9efd67c59e1",
            "dhcp_options_id": "dopt-0f4c40720e7c8f83c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006cfd1f175715fe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a993fbb47cbfa63f",
            "owner_id": "028597908062",
            "tags": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-vpc",
              "Project": "url-shortener"
            },
            "tags_all": {
              "CreatedBy": "Chetan",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "url-shortener-dev-vpc",
              "Project": "url-shortener"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}